<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.registration.RegistrationDetailsActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/helveticaneue"
        android:text="@string/registration_details"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/helveticaneue"
        android:hint="@string/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fontFamily="@font/helveticaneue"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilSchool"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:fontFamily="@font/helveticaneue"
        android:hint="@string/school"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCity">

        <AutoCompleteTextView
            android:id="@+id/atvSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticaneue"
            android:inputType="none"
            android:maxLines="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilIdNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/helveticaneue"
        android:hint="@string/id_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilSchool">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietIdNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fontFamily="@font/helveticaneue"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/helveticaneue"
        android:hint="@string/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilIdNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fontFamily="@font/helveticaneue"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUniversity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/helveticaneue"
        android:hint="@string/university"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUniversity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:fontFamily="@font/helveticaneue"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChooseSubjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/helveticaneue"
        android:text="@string/choose_subjects"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilUniversity" />

    <GridLayout
        android:id="@+id/glChooseSubjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseSubjects">

        <CheckBox
            android:id="@+id/cbMath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/nis_green"
            android:onClick="onCheckboxClicked"
            android:text="@string/math" />

        <CheckBox
            android:id="@+id/cbPhysics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/nis_green"
            android:onClick="onCheckboxClicked"
            android:text="@string/physics" />

        <CheckBox
            android:id="@+id/cbChemistry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/nis_green"
            android:onClick="onCheckboxClicked"
            android:text="@string/chemistry" />

        <CheckBox
            android:id="@+id/cbBiology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/nis_green"
            android:onClick="onCheckboxClicked"
            android:text="@string/biology" />

        <CheckBox
            android:id="@+id/cbInformatics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/nis_green"
            android:onClick="onCheckboxClicked"
            android:text="@string/informatics" />

        <CheckBox
            android:id="@+id/cbHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/nis_green"
            android:onClick="onCheckboxClicked"
            android:text="@string/history" />
    </GridLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDateOfBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:fontFamily="@font/helveticaneue"
        android:hint="@string/date_of_birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glChooseSubjects">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="@font/helveticaneue"
            android:inputType="text"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmitData"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/nis_green"
        android:textStyle="bold"
        android:fontFamily="@font/helveticaneue"
        android:paddingHorizontal="32dp"
        android:paddingVertical="16dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilDateOfBirth"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>